tests/macro_attributes/dim/06-incomplete_eq.stderr
error: Unexpected token. Expected usize literal or generic.
 --> tests/macro_attributes/dim/06-incomplete_eq.rs:3:1
  |
3 | #[lazy_nd(dim =)]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `lazy_nd` (in Nightly builds, run with -Z macro-backtrace for more info)
